Carousel.js fixed shift logic

--- a/project/app/css/main.css
+++ b/project/app/css/main.css
@@ -189,10 +189,10 @@ hr {
 .apps-carousel__row {
 	font-size: 0;
 	white-space: nowrap;
-	-webkit-transition: .3s;
-	-moz-transition: .3s;
-	-o-transition: .3s;
-	transition: .3s;
+	-webkit-transition: .1s;
+	-moz-transition: .1s;
+	-o-transition: .1s;
+	transition: .1s;
 }
 .apps-carousel__row_no-animation {
 	-webkit-transition: none;
@@ -219,6 +219,7 @@ hr {
 	background-size: cover;
 }
 .app__name {
+	text-transform: uppercase;
 	font-size: 1.25rem;
 	font-weight: normal;
 }
